# voxcode

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
src/coding_tool_gateway/: bootstrap.py  cli.py  config_io.py  databricks.py  mcp.py  state.py  ui.py  usage.py
src/coding_tool_gateway/agents/: __init__.py  claude.py  codex.py  gemini.py  opencode.py
src/ucode/: agent_updates.py  cli.py  databricks.py  mcp.py  mcp_web_search.py  state.py  ui.py  usage.py
src/ucode/agents/: __init__.py  claude.py  codex.py  copilot.py  gemini.py  opencode.py  pi.py
src/voxcode/: __init__.py  agent_updates.py  allowed_models.py  bootstrap.py  cli.py  config_io.py  databricks.py  mcp.py  mcp_web_search.py  state.py  telemetry.py  tracing.py  ui.py  usage.py
src/voxcode/agents/: __init__.py  opencode.py
tests/: conftest.py  test_agent_claude.py  test_agent_codex.py  test_agent_copilot.py  test_agent_gemini.py  test_agent_opencode.py  test_agent_pi.py  test_agent_updates.py  test_agents_init.py  test_cli.py  test_config_io.py  test_databricks.py  test_e2e.py  test_e2e_tracing.py  test_e2e_uc.py  test_e2e_user_agent.py  test_lint.py  test_mcp.py  test_mcp_web_search.py  test_state.py  test_telemetry.py  test_tracing.py  test_ui.py  test_usage.py
