[build-system]
requires = ["uv_build>=0.11.0"]
build-backend = "uv_build"

[project]
name = "coding-gateway"
version = "0.1.0"
description = "Bootstrap Codex against a Databricks workspace with minimal setup."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "databricks-sql-connector>=3.6.0",
  "questionary>=2.0.0",
  "typer>=0.12.0",
]

[project.scripts]
coding-gateway = "coding_tool_gateway.cli:main"

[tool.uv.build-backend]
module-name = "coding_tool_gateway"
