[build-system]
requires = ["uv_build>=0.11.0"]
build-backend = "uv_build"

[project]
name = "coding-gateway"
version = "0.1.0"
description = "Bootstrap Codex against a Databricks workspace with minimal setup."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "databricks-sql-connector>=3.6.0",
  "questionary>=2.0.0",
  "tomlkit>=0.13.0",
  "typer>=0.12.0",
]

[project.scripts]
coding-gateway = "coding_tool_gateway.cli:main"

[tool.uv.build-backend]
module-name = "coding_tool_gateway"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long — formatter handles this
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False in tests is fine
